--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ cmake_minimum_required(VERSION 3.1)
 set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 #add_subdirectory(${PROJECT_ROOT}/googletest)
-add_subdirectory(${PROJECT_ROOT}/hello)
+add_subdirectory(${PROJECT_ROOT}/MPU9250_MS5637_t3)
