added some MadgwickQuaternionUpdate unit tests

--- a/MPU9250_MS5637_t3/CMakeLists.txt
+++ b/MPU9250_MS5637_t3/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 set(MY_SRC ${CMAKE_CURRENT_SOURCE_DIR})
-INCLUDE_DIRECTORIES(${ARDUINO_CORE_SRC} ${PROJECT_ROOT})
+INCLUDE_DIRECTORIES(${ARDUINO_CORE_SRC} ${PROJECT_ROOT} ${MY_SRC})
 
 set(sources ${MY_SRC}/Loop.cpp
             ${MY_SRC}/Setup.cpp
