--- a/MPU9250_MS5637_t3/CMakeLists.txt
+++ b/MPU9250_MS5637_t3/CMakeLists.txt
@@ -5,6 +5,8 @@ INCLUDE_DIRECTORIES(${ARDUINO_CORE_SRC} ${PROJECT_ROOT} ${MY_SRC})
 set(sources ${MY_SRC}/Loop.cpp
             ${MY_SRC}/Setup.cpp
             ${MY_SRC}/Components.cpp
+            ${MY_SRC}/Quaternion.cpp
+            ${MY_SRC}/WireReader.cpp
 )
 
 add_subdirectory(atmega328)
