--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+set(ARDUINO_CMAKE_DIR ${PROJECT_ROOT}/arduino_cmake)
 
 add_subdirectory(${PROJECT_ROOT}/googletest)
 add_subdirectory(${PROJECT_ROOT}/MPU9250_MS5637_t3)
