MPU9250_MS5637_t3 with esp8266_12e and lcd_i2c

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest.git
+[submodule "LiquidCrystal_I2C"]
+	path = LiquidCrystal_I2C
+	url = https://github.com/marcoschwartz/LiquidCrystal_I2C.git
