sparkfun's https://learn.sparkfun.com/tutorials/mpu-9250-hookup-guide/all example builds. Not tested yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ cmake_minimum_required(VERSION 3.1)
 set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 set(LCD_SRC ${PROJECT_ROOT}/LiquidCrystal_I2C)
 set(ARDUINO_CMAKE_DIR ${PROJECT_ROOT}/arduino_cmake)
+set(TIMERONE_SRC ${PROJECT_ROOT}/TimerOne)
 
 add_subdirectory(${PROJECT_ROOT}/googletest)
 add_subdirectory(${ARDUINO_CMAKE_DIR}/esp8266/core)
 add_subdirectory(${PROJECT_ROOT}/MPU9250_MS5637_t3)
 add_subdirectory(${PROJECT_ROOT}/MPU9250_lulu)
+add_subdirectory(${PROJECT_ROOT}/sparkfun)
