--- a/sparkfun/targets/atmega328/CMakeLists.txt
+++ b/sparkfun/targets/atmega328/CMakeLists.txt
@@ -1,5 +1,4 @@
-
-project(mpu9250_lulu_atmega328)
+project(sparkfun_atmega328)
 
 include(${ARDUINO_CMAKE_DIR}/atmega328/paths.cmake)
 include(${ARDUINO_CMAKE_DIR}/atmega328/tools.cmake)
@@ -8,9 +7,7 @@ include(${ARDUINO_CMAKE_DIR}/atmega328/libs.cmake)
 include(${ARDUINO_CMAKE_DIR}/atmega328/core.cmake)
 include(${ARDUINO_CMAKE_DIR}/atmega328/deploy.cmake)
 
-set(timerone_sources ${TIMERONE_SRC}/TimerOne.cpp)
-
-add_executable(${PROJECT_NAME} ${sources} ${atmega328_core_sources} ${arduino_wire_sources} ${timerone_sources})
+add_executable(${PROJECT_NAME} ${sources} ${atmega328_core_sources} ${arduino_wire_sources} ${arduino_spi_sources} ${sparkfun_lib_sources})
 target_link_libraries(${PROJECT_NAME} ${atmega328_linker_options})
 target_compile_options(
     ${PROJECT_NAME} PRIVATE
@@ -20,9 +17,9 @@ target_include_directories(
     ${PROJECT_NAME} PRIVATE
     ${ATMEGA328_CORE_SRC}
     ${ARDUINO_PINS}
-    ${MY_SRC}
+    ${SPARKFUN_LIB_SRC}
     ${ARDUINO_WIRE_SRC}
-    ${TIMERONE_SRC}
+    ${ARDUINO_SPI_SRC}
 )
 
 upload_atmega328(${PROJECT_NAME} ${PROJECT_NAME})
