--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "LiquidCrystal_I2C"]
 	path = LiquidCrystal_I2C
 	url = https://github.com/marcoschwartz/LiquidCrystal_I2C.git
+[submodule "TimerOne"]
+	path = TimerOne
+	url = https://github.com/PaulStoffregen/TimerOne.git
+[submodule "SparkFun_MPU-9250_Breakout_Arduino_Library"]
+	path = SparkFun_MPU-9250_Breakout_Arduino_Library
+	url = https://github.com/sparkfun/SparkFun_MPU-9250_Breakout_Arduino_Library.git
