sparkfun esp8266 12e target. Untested.

--- a/sparkfun/CMakeLists.txt
+++ b/sparkfun/CMakeLists.txt
@@ -7,3 +7,4 @@ set(sparkfun_lib_sources ${SPARKFUN_LIB_SRC}/MPU9250.cpp
                          ${SPARKFUN_LIB_SRC}/quaternionFilters.cpp)
 
 add_subdirectory(targets/atmega328)
+add_subdirectory(targets/12e)
