--- a/sparkfun/CMakeLists.txt
+++ b/sparkfun/CMakeLists.txt
@@ -6,5 +6,5 @@ set(SPARKFUN_LIB_SRC ${PROJECT_ROOT}/SparkFun_MPU-9250_Breakout_Arduino_Library/
 set(sparkfun_lib_sources ${SPARKFUN_LIB_SRC}/MPU9250.cpp
                          ${SPARKFUN_LIB_SRC}/quaternionFilters.cpp)
 
-add_subdirectory(targets/atmega328)
+#add_subdirectory(targets/atmega328)
 add_subdirectory(targets/12e)
