--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Adafruit-GFX-Library"]
 	path = Adafruit-GFX-Library
 	url = https://github.com/adafruit/Adafruit-GFX-Library.git
+[submodule "arduinoWebSockets"]
+	path = arduinoWebSockets
+	url = https://github.com/Links2004/arduinoWebSockets.git
