added mpu6050_dmp6, untested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(${PROJECT_ROOT}/MPU9250_MS5637_t3)
 add_subdirectory(${PROJECT_ROOT}/MPU9250_lulu)
 add_subdirectory(${PROJECT_ROOT}/sparkfun)
 add_subdirectory(${PROJECT_ROOT}/sparkfun_dmp)
+add_subdirectory(${PROJECT_ROOT}/mpu6050_dmp6)
