--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "SparkFun_MPU-9250-DMP_Arduino_Library"]
 	path = SparkFun_MPU-9250-DMP_Arduino_Library
 	url = https://github.com/mitikkak/SparkFun_MPU-9250-DMP_Arduino_Library.git
+[submodule "i2cdevlib"]
+	path = i2cdevlib
+	url = https://github.com/jrowberg/i2cdevlib.git
