--- a/sparkfun_dmp/targets/wroom32/CMakeLists.txt
+++ b/sparkfun_dmp/targets/wroom32/CMakeLists.txt
@@ -10,6 +10,7 @@ set(ext_sources
     ${esp32_spi_sources}
     ${esp32_wifi_sources}
     ${web_sockets_sources}
+    ${esp32_async_udp_sources}
 )
 set(EXT_SRC_DIR
     ${SPARKFUN_DMP_LIB_SRC}
@@ -20,6 +21,7 @@ set(EXT_SRC_DIR
     ${WEB_SOCKETS_DIR}
     ${ESP32_WIFI_SRC_DIR}
     ${ESP32_WIFI_CLIENT_SECURE_SRC_DIR}
+    ${ESP32_ASYNC_UDP_SRC_DIR}
 )
 
 set(all_sources ${sources} ${ext_sources})
