--- a/sparkfun_dmp/targets/esp8266/12e/CMakeLists.txt
+++ b/sparkfun_dmp/targets/esp8266/12e/CMakeLists.txt
@@ -11,6 +11,7 @@ set(EXT_SRC_DIR
                  ${WIFI_ESP8266_DIR}
                  ${WEB_SOCKETS_DIR}
                  ${HASH_ESP8266_DIR}
+                 ${ESP8266_ASYNC_UDP_DIR}
 )
 
 set(ext_sources 
@@ -21,6 +22,7 @@ set(ext_sources
     ${wifi_sources}
     ${web_sockets_sources}
     ${HASH_ESP8266_DIR}/Hash.cpp
+    ${ESP8266_ASYNC_UDP_DIR}/AsyncUDP.cpp
 )
 
 set(all_sources ${sources} ${ext_sources})
