--- a/sparkfun_dmp/targets/wroom32/CMakeLists.txt
+++ b/sparkfun_dmp/targets/wroom32/CMakeLists.txt
@@ -11,6 +11,9 @@ set(ext_sources
     ${esp32_wifi_sources}
     ${web_sockets_sources}
     ${esp32_async_udp_sources}
+    ${esp32_ota_sources}
+    ${esp32_update_sources}
+    ${esp32_mdns_sources}
 )
 set(EXT_SRC_DIR
     ${SPARKFUN_DMP_LIB_SRC}
@@ -22,6 +25,9 @@ set(EXT_SRC_DIR
     ${ESP32_WIFI_SRC_DIR}
     ${ESP32_WIFI_CLIENT_SECURE_SRC_DIR}
     ${ESP32_ASYNC_UDP_SRC_DIR}
+    ${ESP32_OTA_SRC_DIR}
+    ${ESP32_UPDATE_SRC_DIR}
+    ${ESP32_MDNS_SRC_DIR}
 )
 
 set(all_sources ${sources} ${ext_sources})
